Fix modal visibility

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -104,6 +104,9 @@
 }
 
 @media screen and (max-width: 627px) {
+  .modal {
+    visibility: hidden;
+  }
   .modal__container {
     max-width: 300px;
     padding: 12px;
